--- a/school.html
+++ b/school.html
@@ -85,7 +85,7 @@
     <td><<img src="images/Dwight.png" height="60" width="65"></td>
     <td><img src="images/Iroqoui.jpg" height="60" width="65"> </td>   
     <td><img src="images/Momence.jpg" height="60" width="65"></td>
- 	<td><img src="images/Senaca.jpg" height="60" width="65"></td>
+ 	<td><img src="images/Senaca.jpg"  height="60" width="65"></td>
  	<td><img src="images/Watseka.jpg" height="60" width="65"></td>
   </tr>
   
@@ -150,7 +150,7 @@
         		<div id="footer">
 			<p>&copy;Copyright January 2022 Shayes Company.</p>       
 				</div>
-
+</div>
 </body>
 </html>
 
