--- a/contact.html
+++ b/contact.html
@@ -142,7 +142,7 @@
           <form action="https://formsubmit.co/e25a812a9c152e9ac13ebf902950097e" method="POST">
 		  
 		  <!-- Honeypot -->
-		  <input type="text" name="_honey" sytle="display": none;"
+		  <input type="text" name="_honey" sytle="display: none;"
 									  
 		  <!-- Disable Captcha -->
 		 <input type="hidden" name="_Captcha" value="false"  						  
