--- a/contact.html
+++ b/contact.html
@@ -140,6 +140,7 @@
           <!--  <form name="contact-form" method="post" action="mail_form.php<?php $_POST[]; ?>"> -->
           
           <form action="https://formsubmit.co/e25a812a9c152e9ac13ebf902950097e" method="POST">
+		  <input type="hidden" name="_cc" value="spirohayes@sbcglobal.net">
 		  
 		  <!-- Honeypot -->
 		  <input type="text" name="_honey" style="display:none">
