--- a/rules.html
+++ b/rules.html
@@ -136,9 +136,9 @@
                  <li style="color:red;font-size:30px"><a href="Football Rules 2022.pdf">Football Rules 2022</a><br /></li>
                  <li style="color:red;font-size:30px"><a href="Flag Football Rules.pdf">Flag Football </a></li>
                  <li style="color:red;font-size:30px"><a href="https://www.nfhs.org/media/869191/2014_official_football_signals.pdf">Official Football Signals </a></li>
-                 <li style="color:red;font-size:30px"><a href="https://center.ihsa.org/go/officials-center-new/menu-education-sport.asp?   ActivityID=OFB&ID=805">Blocking below Waist </a></li>
-                 <li style="color:red;font-size:30px"><a href="https://center.ihsa.org/go/officials-center-new/menu-education-sport.asp?ActivityID=OFB&ID=806">Ineligible Downfield </a></li>   
-				 <li style="color:red;font-size:30px"><a href="https://center.ihsa.org/go/officials-center-new/menu-education-sport.asp?ActivityID=OFB&ID=809">Blindside Blocks </a></li>              
+                 <li style="color:red;font-size:30px"><a href="https://www.youtube.com/watch?v=xkrmZCdZvQs&t=4s">Blocking below Waist </a></li>
+                 <li style="color:red;font-size:30px"><a href="https://www.youtube.com/watch?v=RJuuxV-okME">Ineligible Downfield </a></li>   
+				 <li style="color:red;font-size:30px"><a href="https://www.youtube.com/watch?v=pPCXL3cP-vg">Blindside Blocks </a></li>              
                  
               <!--   <li style="color:red;font-size:30px"><a href="Drones IHSA.pdf">Using Drones </a></li> -->
                              
