--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <div id="content" style="width: 638px; height: 492px">
             <h1>Welcome to Northeastern Illinois Football Offcials Association</h1>
             <p>  <strong>ROLE OF THE ASSOCIATION</strong></p>
-            <p> The Northeastern Illinois Football Officials Association is dedicated to serving the sport of football in the state of Illinois through the training and development of quality officials who will positively impact the sports in which they are involved. We aim to fulfill this mission by maintaining an organization that upholds the highest principles in supporting our members at every stage of their officiating career..</p>
+            <p> The Northeastern Illinois Football Officials Association is dedicated to serving the sport of football in the state of Illinois through the training and development of quality officials who will positively impact the sport of football. We aim to fulfill this mission by maintaining an organization that upholds the highest principles in supporting our members at every stage of their officiating career..</p>
             <img src="images/background1.jpg" class="auto-style2" height="113" width="202" />
            
           <h2>Vision </h2>
