--- a/about.html
+++ b/about.html
@@ -126,8 +126,7 @@
             <h1>INTRODUCTION:</h1>
             
             <p>The purposes of the NEIFOA are:
-  To establish and maintain an organization that will promote through the actions, attitude and leadership of its members, the maintaining of a high standard of ethics,
- good sportsmanship, respect and encouragement of fair play with cooperation and better understanding among officials, athletic directors, coaches and players.
+  To establish and maintain an organization that will promote through the actions, attitude and leadership of its members, the maintaining of a high standard of ethics, good sportsmanship, respect and encouragement of fair play with cooperation and better understanding among officials, athletic directors, coaches and players.
   All rules, regulations and policies adopted by the Illinois High School Athletic Association (IHSA) and the National Federation of High School Athletic Association (NFHS ).
 </p>    
                      
