--- a/Welcome.html
+++ b/Welcome.html
@@ -135,7 +135,8 @@
         <div id="content" style="width: 638px; height: 492px">
             <h1>Welcome to Northeastern Illinois Football Offcials Association</h1>
             <p>  <strong>ROLE OF THE ASSOCIATION</strong></p>
-            <p> The Northeastern Illinois Football Officials Association is dedicated to serving the sport of football in the state of Illinois through the training and development of quality officials who will positively impact the sport of football. We aim to fulfill this mission by maintaining an organization that upholds the highest principles in supporting our members at every stage of their officiating career..</p>
+            <p> The Northeastern Illinois Football Officials Association serves our local schools through providing the best officiating in the State of Illinois. Through officiating we look to enhance student learning, sportsmanship, safety and lifelong values. With integrity and professionalism as our foundation, 
+we consistently govern the rules created by the Illinois High School Athletic Association and the National Federation of State High School Associations...</p>
            
            <div id="cont_dd35e81a9ce04289a2046eed57095cfa"><script type="text/javascript" async="" src="https://www.theweather.com/wid_loader/dd35e81a9ce04289a2046eed57095cfa"></script></div>
         
