--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
                 <li><a href="school.html">SCHOOLS</a></li>
                 <li><a href="Links.html">USEFUL LINKS</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
-                <li><a href= "clinic.html">MEETING</a></li>
+                <li><a href= "clinic.html">CLINIC</a></li>
                 <li><a href="rules.html">RULES</a></li>
 
             </ul>
