--- a/rules.html
+++ b/rules.html
@@ -159,7 +159,7 @@
 			
 			<h2 style="width: 71%">Ruling:</h2>
             <p>Foul for intentional grounding. In order to take advantage of the excepton, the pass must reach the neutal zone including the extention beyoud the sideling. 
-            THe penalty is five yards fron the spot A1's pass and include loss of downS</p>
+            THe penalty is five yards fron the spot A1's pass and include loss of down.</p>
         </div>
 	
 		<div id="footer">
