--- a/Welcome.html
+++ b/Welcome.html
@@ -99,7 +99,7 @@
 			
 			<li class="sliderImage">
 				<img src="images/banner2.jpg"/>
-				<span class="top"><strong>Flag Rules for 2022</strong><br />Well be update later in year <br />Click the Rule tab for information<br /><br /><br /> <br /></span>
+				<span class="top"><strong>Flag Rules for 2022</strong><br />Update's will be posted later in the year<br />Click the Rule tab for information<br /><br /><br /> <br /></span>
 			</li>
 			
 			<li class="sliderImage">
