--- a/link.htm
+++ b/link.htm
@@ -115,28 +115,31 @@
 					
 			<li class="sliderImage">
 				<img src="images/banner1.jpg" />
-				<span class="top"><strong>This is an image title</strong><br />Lorem pellentesque habitant morbi tristique.<br />Estibulum erat wisi, condimentum, commodo <br />ornare sit wisi. Aenean fermentum, elit eget<br />tinciduntcondimentum.Vestibulum erat wisi<br />condimentum sed, commodo vitae, ornare <br />sit amet, wisi. Aenean fermentum, elit eget <br />tincidunt condimentum.</span>
+				<span style="text-align:center" class="top"><strong >  IHSA </strong><br />Summer Officials Conference<br />The IHSA will host our Officials Conference on <br /> July 8th and 9th at Normal West High School.<br /> Our host hotel is the Holiday Inn<br />on the north edge of Normal..<br /> </span>
 			</li>
-			
+
 			<li class="sliderImage">
 				<img src="images/banner2.jpg"/>
-				<span class="top"><strong>This is an image title</strong><br />Lorem pellentesque habitant morbi tristique.<br />Estibulum erat wisi, condimentum, commodo <br />ornare sit wisi. Aenean fermentum, elit eget<br />tinciduntcondimentum.Vestibulum erat wisi<br />condimentum sed, commodo vitae, ornare <br />sit amet, wisi. Aenean fermentum, elit eget <br />tincidunt condimentum.</span>
+				<span class="top"><strong>Flag Rules for 2022</strong><br /> Update's will be posted later in the year<br />Click the Rule tab for information<br /><br /><br /> <br /></span>
 			</li>
 			
 			<li class="sliderImage">
 				<img src="images/banner3.jpg" />
-				<span class="top"><strong>This is an image title</strong><br />Lorem pellentesque habitant morbi tristique.<br />Estibulum erat wisi, condimentum, commodo <br />ornare sit wisi. Aenean fermentum, elit eget<br />tinciduntcondimentum.Vestibulum erat wisi<br />condimentum sed, commodo vitae, ornare <br />sit amet, wisi. Aenean fermentum, elit eget <br />tincidunt condimentum.</span>
+				<span class="top"><strong>Clinic 2022</strong><br />Pontiac High School.<br />Sunday August 14th<br />Level 1 and ll<br />Registration nooon to 1:00pm<br />Click the bottom below for more information<br/><a href="Clinic.html">CLINIC</a><br>
+						<br /> <br /> <br /></span>
 			</li>
 
-			<li class="sliderImage">
+				<li class="sliderImage">
 				<img src="images/banner4.jpg" />
-				<span class="top"><strong>This is an image title</strong><br />Lorem pellentesque habitant morbi tristique.<br />Estibulum erat wisi, condimentum, commodo <br />ornare sit wisi. Aenean fermentum, elit eget<br />tinciduntcondimentum.Vestibulum erat wisi<br />condimentum sed, commodo vitae, ornare <br />sit amet, wisi. Aenean fermentum, elit eget <br />tincidunt condimentum.</span>
+				<span class="top"><strong>Football Rules Changes </strong><br /> Click the Rule tab for the 2022 rules changes.<br /><br /><br /><br /></span>
 			</li>
+
 
 			<li class="sliderImage">
 				<img src="images/banner5.jpg" />
-				<span class="top"><strong>This is an image title</strong><br />Lorem pellentesque habitant morbi tristique.<br />Estibulum erat wisi, condimentum, commodo <br />ornare sit wisi. Aenean fermentum, elit eget<br />tinciduntcondimentum.Vestibulum erat wisi<br />condimentum sed, commodo vitae, ornare <br />sit amet, wisi. Aenean fermentum, elit eget <br />tincidunt condimentum.</span>
+				<span class="top"><strong>>Contact Dean Magro</strong><br />P.O Box 1145<br />Beecher, IL 60401<br />Phone 219-688-0875<br />Click the contact tab for more information <br /> <br /> <br /></span>
 			</li>
+
 
 
 
