--- a/meeting.html
+++ b/meeting.html
@@ -82,7 +82,7 @@
                 <li><a href="index.html">WELCOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="school.html">SCHOOLS</a></li>
-                <li><a href="Links.html">USEFUL LINKS</a></li>
+                <li><a href="Link.html">USEFUL LINKS</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
                 <li><a href="clinic.html">CLINIC</a></li>
                 <li><a href="rules.html">RULES</a></li>
@@ -97,8 +97,14 @@
   </li>
 			
 			<li class="sliderImage">
+			<li class="sliderImage">
+				<img src="images/banner1.jpg" />
+				<span style="text-align:center" class="top"><strong >  IHSA </strong><br />Summer Officials Conference<br />The IHSA will host our Officials Conference on <br /> July 8th and 9th at Normal West High School.<br /> Our host hotel is the Holiday Inn<br />on the north edge of Normal..<br /> </span>
+			</li>
+
+			<li class="sliderImage">
 				<img src="images/banner2.jpg"/>
-				<span class="top"><strong>Flag Rules for 2022</strong><br />Well be update later in year <br />Click the Rule tab for information<br /><br /><br /> <br /></span>
+				<span class="top"><strong>Flag Rules for 2022</strong><br /> Update's will be posted later in the year<br />Click the Rule tab for information<br /><br /><br /> <br /></span>
 			</li>
 			
 			<li class="sliderImage">
@@ -107,17 +113,16 @@
 						<br /> <br /> <br /></span>
 			</li>
 
-			<li class="sliderImage">
+				<li class="sliderImage">
 				<img src="images/banner4.jpg" />
-				<span class="top"><strong>Football Rules Changes</strong><br /><br /> <br /><br /><br /><br /></span>
+				<span class="top"><strong>Football Rules Changes </strong><br /> Click the Rule tab for the 2022 rules changes.<br /><br /><br /><br /></span>
 			</li>
+
 
 			<li class="sliderImage">
 				<img src="images/banner5.jpg" />
 				<span class="top"><strong>>Contact Dean Magro</strong><br />P.O Box 1145<br />Beecher, IL 60401<br />Phone 219-688-0875<br />Click the contact tab for more information <br /> <br /> <br /></span>
 			</li>
-
-
 
 			<div class="clear sliderImage"></div>
 	</ul>
