--- a/Welcome.html
+++ b/Welcome.html
@@ -83,7 +83,8 @@
                 <li><a href="school.html">SCHOOLS</a></li>
                 <li><a href="Link.html">USEFUL LINKS</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
-                <li><a href="Clinic.html">CLINIC</a></li>
+                <li><a href="Clinic.html">CLINIC</a></li>				
+		 <li><a href="rules.html">RULES</a></li>
 
             </ul>
 		</div>
