--- a/link.htm
+++ b/link.htm
@@ -105,6 +105,7 @@
                 <li><a href="Link.html">USEFUL LINKS</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
                 <li><a href="Clinic.html">CLINIC</a></li>
+		<li><a href="rules.html">RULES</a></li>
 
             </ul>
 		</div>
