--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
                 <li><a href="index.html">WELCOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="school.html">SCHOOLS</a></li>
-                <li><a href="Links.html">USEFUL LINKS</a></li>
+                <li><a href="Link.html">USEFUL LINKS</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
                 <li><a href="clinic.html">CLINIC</a></li>
                 <li><a href="rules.html">RULES</a></li>
