--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 
 <html>
 
@@ -142,13 +142,10 @@
             
         <div id="rightside">
         <img scr="<img alt=" src="images/Football_Play.jpg" height="81" width="191" />
-            <h2>Play of the Week:</h2>
+            <h2>Chop Block 2-3-8</h2>
 			<h3> SITUATION: </h3>
-			<p>Second and four at the B-15. B41 intercepts a forward pass at the B-2 and his momentum carries him into his end zone. While still in the end zone B41 fumbles the ball which rolls forward into the field of 				play. In the scramble for the ball it goes back into Team B’s end zone and over the end line.         </p>
-			
-			
-			<h2 style="width: 71%">Answer Below:</h2>
-            <p>NFHS and NCAA RULING: In both rulings, this will be a safety and two points for Team A. The force (NFHS) or impetus (NCAA) for the ball being in the end zone the second time is from the fumble, and therefore 				Team B is responsible. (NFHS 8-5-1; 8-5-2b; NCAA 8-5-1; 8-7-1)        </p>
+			<p>The definition of a chop block was slightly modified. A chop block is a combination block by two or more teamates against an opponent other than the runner, with or without delay, where one of the blocks is low <strong>(below the waist)</strong> and one of the blocks is high <strong>(above the waist)</strong>. Previously the low block was defined as being at the knee or below and the high block was above the knee.      </p>
+					
         </div>
 	
 		<div id="footer">
