--- a/index.html
+++ b/index.html
@@ -144,7 +144,9 @@
         <img scr="<img alt=" src="images/Football_Play.jpg" height="100" width="175" />
             <h3>Chop Block 2-3-8</h3>
 			 <p>The definition of a chop block was slightly modified. A chop block is a combination block by two or more teamates against an opponent other than the runner, with or without delay, where one of the blocks is low <strong>(below the waist)</strong> and one of the blocks is high <strong>(above the waist)</strong>. Previously the low block was defined as being at the knee or below and the high block was above the knee.      </p>
-			 <img scr="<img alt=" src="images/chopblock.jpg" height="125" width="100" />		
+			 <img scr="<img alt=" src="images/chopblock.jpg"/>	
+		
+	<!--	height="125" width="100" -->
         </div>
 	
 		<div id="footer">
