--- a/link.htm
+++ b/link.htm
@@ -152,8 +152,7 @@
 		
 		<div id="subbanner">
 
-			<p><strong>Points of Emphasis</strong></p>br>Sportsmanship by fans, players and coaches is a continued point of emphasis, for 2022 season.</p>
-           <!-- <p>This is where sports lives and breathes and exists for the sole purpose of transporting us to another place and time where we can experience the thrill of competition...</p>-->
+	    <p>This is where sports lives and breathes and exists for the sole purpose of transporting us to another place and time where we can experience the thrill of competition...</p>
 		</div>
 	
         <div id="content" style="width: 638px; height: 492px">
