--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<script type="text/javascript">  // This is the script for the banner slider
 		$(document).ready(function() {
 			$('#slider').s3Slider({
-				timeOut: 3000
+				timeOut: 5000
 			});
 		});
 	</script>
@@ -98,7 +98,7 @@
 
 			<li class="sliderImage">
 				<img src="images/banner2.jpg"/>
-				<span class="top"><strong>Flag Rules for 2022</strong><br /> Update's will be posted later in the year<br />Click the Rule tab for information<br /><br /><br /> <br /></span>
+				<span class="top"><strong>Flag Rules for 2022</strong><br /> Update's will be posted later in the year<br />Click the Rule tab for futher information<br /><br /><br /> <br /></span>
 			</li>
 			
 			<li class="sliderImage">
