--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
 
 			<li class="sliderImage">
 				<img src="images/banner2.jpg"/>
-				<span class="top"><strong>Flag Rules for 2022</strong><br /> Update's will be posted later in the year<br />Click the Rule tab for futher information<br /><br /><br /> <br /></span>
+				<span class="top"><strong>2022 Football  Association Meetings</strong><br /> Monday July 25th- Front Row- Homer Glen 6:30 pm<br />Monday Aug 8th- Front Row- Homer Glen 6:30 pm<br />Sunday Aug 14th- level 1 /level 2 Clinic- 12:00 pm<br />Monday August 22nd- Part 1 test Review <br /> Agenda and other information will be posted in July.
+					<br /></span>
 			</li>
 			
 			<li class="sliderImage">
