--- a/school.html
+++ b/school.html
@@ -81,7 +81,7 @@
           				<table>
   <tr>
     <td><img src="images/clifton.jpg" height="60" width="65"></td>
-    <td><<img src="images/Dwight.png" height="60" width="65"></td>
+    <td><img src="images/Dwight.png" height="60" width="65"></td>
     <td><img src="images/Iroqoui.jpg" height="60" width="65"> </td>   
     <td><img src="images/Momence.jpg" height="60" width="65"></td>
  	<td><img src="images/Senaca.jpg"  height="60" width="65"></td>
