--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
 			<li class="sliderImage">
 				<img src="images/banner2.jpg"/>
 					<span class="top"><strong>2022 Association Meetings</strong><br /> Monday July 25th- Front Row- Homer Glen 6:30 pm<br />Monday Aug 8th- Front Row- Homer Glen 6:30 pm<br />Sunday Aug 14th- level 1 /level 2 Clinic- 12:00 pm<br />Monday August 22nd- Part 1 test Review <br /> Agenda and other information will be posted in July.
-					<br /></span>
+					<br />Click the bottom below for more information. <br/>
+					<a href="https://www.google.com/maps/place/14903+Founders+Crossing,+Homer+Glen,+IL+60491/@41.6191158,-87.9313558,17z/data=!3m1!4b1!4m5!3m4!1s0x880e4180da34a9e7:0x3de8350b8e576cb2!8m2!3d41.6191158!4d-87.9313558">Location</a><br/></span>
 			</li>
 			<!--https://www.google.com/maps/place/14903+Founders+Crossing,+Homer+Glen,+IL+60491/@41.6191158,-87.9313558,17z/data=!3m1!4b1!4m5!3m4!1s0x880e4180da34a9e7:0x3de8350b8e576cb2!8m2!3d41.6191158!4d-87.9313558-->
 			<li class="sliderImage">
