--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
 					<br />Click the bottom below for more information. <br/>
 					<a href="https://www.google.com/maps/place/14903+Founders+Crossing,+Homer+Glen,+IL+60491/@41.6191158,-87.9313558,17z/data=!3m1!4b1!4m5!3m4!1s0x880e4180da34a9e7:0x3de8350b8e576cb2!8m2!3d41.6191158!4d-87.9313558">Location</a><br/></span>
 			</li>
+			
+			<!-- Front Row Location -->
 			<!--https://www.google.com/maps/place/14903+Founders+Crossing,+Homer+Glen,+IL+60491/@41.6191158,-87.9313558,17z/data=!3m1!4b1!4m5!3m4!1s0x880e4180da34a9e7:0x3de8350b8e576cb2!8m2!3d41.6191158!4d-87.9313558-->
 			<li class="sliderImage">
 				<img src="images/banner3.jpg" />
