--- a/Welcome.html
+++ b/Welcome.html
@@ -100,7 +100,7 @@
 			
 			<li class="sliderImage">
 				<img src="images/banner2.jpg"/>
-<span class="top"><strong>2022 Association Meetings</strong><br /> Monday July 25th- Front Row- Homer Glen 6:30 pm<br />Monday Aug 8th- Front Row- Homer Glen 6:30 pm<br />Sunday Aug 14th- level 1 /level 2 Clinic- 12:00 pm<br />Monday August 22nd- Part 1 test Review <br /> Agenda and other information will be posted in July.
+<span class="top"><strong>2022 Association Meetings</strong><br /> Monday July 25th- Front Row- Homer Glen 6:30 pm<br />Monday Aug 8th- Front Row- Homer Glen 6:30 pm<br />Sunday Aug 14th- level 1 /level 2 Clinic- 12:00 pm<br />Monday August 22nd- Part 1 test Review <br /> Agenda and other information will be posted in July.<br /></span>
 			</li>
 			
 			<li class="sliderImage">
