--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 
 <html>
 
@@ -11,7 +11,7 @@
 	<script type="text/javascript">  // This is the script for the banner slider
 		$(document).ready(function() {
 			$('#slider').s3Slider({
-				timeOut: 5000
+				timeOut: 3000
 			});
 		});
 	</script>
@@ -98,7 +98,7 @@
 
 			<li class="sliderImage">
 				<img src="images/banner2.jpg"/>
-				<span class="top"><strong>2022 Association Meetings</strong><br /> Monday July 25th- Front Row- Homer Glen 6:30 pm<br />Monday Aug 8th- Front Row- Homer Glen 6:30 pm<br />Sunday Aug 14th- level 1 /level 2 Clinic- 12:00 pm<br />Monday August 22nd- Part 1 test Review <br /> Agenda and other information will be posted in July.<span class="top"><strong>2022 Association Meetings</strong><br /> Monday July 25th- Front Row- Homer Glen 6:30 pm<br />Monday Aug 8th- Front Row- Homer Glen 6:30 pm<br />Sunday Aug 14th- level 1 /level 2 Clinic- 12:00 pm<br />Monday August 22nd- Part 1 test Review <br /> Agenda and other information will be posted in July.
+				<span class="top"><strong>2022 Association Meetings</strong><br /> Monday July 25th- Front Row- Homer Glen 6:30 pm<br />Monday Aug 8th- Front Row- Homer Glen 6:30 pm<br />Sunday Aug 14th- level 1 /level 2 Clinic- 12:00 pm<br />Monday August 22nd- Part 1 test Review <br /> Agenda and other information will be posted in July.<br /></span><span class="top"><strong>2022 Association Meetings</strong><br /> Monday July 25th- Front Row- Homer Glen 6:30 pm<br />Monday Aug 8th- Front Row- Homer Glen 6:30 pm<br />Sunday Aug 14th- level 1 /level 2 Clinic- 12:00 pm<br />Monday August 22nd- Part 1 test Review <br /> Agenda and other information will be posted in July.<br /></span>
 			</li>
 			
 			<li class="sliderImage">
@@ -125,7 +125,7 @@
 	</div>
 		
 		<div id="subbanner">
-            <p>This is where sports lives and breathes and exists for the sole purpose of transporting us to another place and time where we can experience the thrill of competition...</p>
+           <!-- <p>This is where sports lives and breathes and exists for the sole purpose of transporting us to another place and time where we can experience the thrill of competition...</p>-->
 		</div>
 	
         <div id="content" style="width: 638px; height: 492px">
