--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
                 <li><a href="index.html">WELCOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="school.html">SCHOOLS</a></li>
-                <li><a href="Link.html">USEFUL LINKS</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
-                <li><a href="clinic.html">CLINIC</a></li>
+                 <li><a href="contact.html">CONTACT</a></li>
+                <li><a href="clinic.html">CLINICS</a></li>
                 <li><a href="rules.html">RULES</a></li>
+		<li><a href="Link.html">USEFUL LINKS</a></li>		
 			<!--	<li><a href="meeting.html">MEETING</a></li> -->
 
 
@@ -129,7 +129,7 @@
 	</div>
 		
 		<div id="subbanner">
-            <p>This is where sports lives and breathes and exists for the sole purpose of transporting us to another place and time where we can experience the thrill of competition...</p>
+       <!--     <p>This is where sports lives and breathes and exists for the sole purpose of transporting us to another place and time where we can experience the thrill of competition...</p> -->
 		</div>
 	
         <div id="content" style="width: 638px; height: 492px">
