--- a/Welcome.html
+++ b/Welcome.html
@@ -81,11 +81,10 @@
                 <li><a href="index.html">WELCOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="school.html">SCHOOLS</a></li>
-                <li><a href="Link.html">USEFUL LINKS</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
-                <li><a href="Clinic.html">CLINIC</a></li>				
+                <li><a href="Clinic.html">CLINICS</a></li>				
 		 <li><a href="rules.html">RULES</a></li>
-
+		<li><a href="Link.html">USEFUL LINKS</a></li>
             </ul>
 		</div>
 		
@@ -128,7 +127,7 @@
 	</div>
 		
 		<div id="subbanner">
-            <p>This is where sports lives and breathes and exists for the sole purpose of transporting us to another place and time where we can experience the thrill of competition...</p>
+     <!--       <p>This is where sports lives and breathes and exists for the sole purpose of transporting us to another place and time where we can experience the thrill of competition...</p> -->
 		</div>
 	
         <!-- #BeginEditable "content" -->
