--- a/clinic.html
+++ b/clinic.html
@@ -10,7 +10,7 @@
 	<script type="text/javascript">  // This is the script for the banner slider
 		$(document).ready(function() {
 			$('#slider').s3Slider({
-				timeOut: 3000
+				timeOut: 5000
 			});
 		});
 	</script>
@@ -73,11 +73,10 @@
                 <li><a href="index.html">WELCOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="school.html">SCHOOLS</a></li>
-                <li><a href="Links.html">USEFUL LINKS</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
-                <li><a href="clinic.html">CLINIC</a></li>
+                 <li><a href="contact.html">CONTACT</a></li>
+                <li><a href="clinic.html">CLINICS</a></li>
                 <li><a href="rules.html">RULES</a></li>
-
+		<li><a href="Links.html">USEFUL LINKS</a></li>
 
             </ul>
 		</div>
