--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <img src="images/NEIFOA.jpg" />
       </div>
 		
-        <div id="social-media">
+    <!--    <div id="social-media">
 			<p>Connect With Us</p>
             <ul>
             	<li><a href="http://www.facebook.com"><img src="images/icons/facebook.png" width="24" height="24" /></a></li>
@@ -67,7 +67,7 @@
                 <li><a href="http://www.twitter.com"><img src="images/icons/twitter.png" width="24" height="24" /></a></li>
             </ul>
             <p>Contact Us Today For Support - 708.516.9328</p>
-		</div>
+		</div> -->
             
      </div>
 		
@@ -145,7 +145,7 @@
                 </div>
             
         <div id="rightside">
-        <img scr="<img alt=" src="images/Football_Play.jpg" height="100" width="175" />
+        <img scr="<img alt=" src="images/banner8a.jpg" height="100" width="175" />
             <h3>Chop Block 2-3-8</h3>
 			 <p>The definition of a chop block was slightly modified. A chop block is a combination block by two or more teamates against an opponent other than the runner, with or without delay, where one of the blocks is low <strong>(below the waist)</strong> and one of the blocks is high <strong>(above the waist)</strong>. Previously the low block was defined as being at the knee or below and the high block was above the knee.      </p>
 			 <img scr="<img alt=" src="images/chopblock.jpg"/>	
