--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
             <p> The Northeastern Illinois Football Officials Association provide education in all rules, regulations and policies adopted by the Illinois High School Athletic Association (IHSA) and the National Federation of High School Athletic Association (NFHS).  ..</p>
             <img src="images/background1.jpg" class="auto-style2" height="113" width="202" />
            <ol>
-		   <li>Maintain a high standard of ethics, sportsmanship, respect and encouragement.</li>
-		   <li>Promote fair play with cooperation among officials, athletic directors, coaches and players.</li>
+		   <li style="list-style-type:square">Maintain a high standard of ethics, sportsmanship, respect and encouragement.</li>
+		   <li style="list-style-type:square">Promote fair play with cooperation among officials, athletic directors, coaches and players.</li>
 		</ol>
      <!--     <h2>Mission </h2>
             
