--- a/index.html
+++ b/index.html
@@ -135,11 +135,13 @@
 		<h2> <strong>ROLE OF THE ASSOCIATION</strong></h2>
 		
             <p> The Northeastern Illinois Football Officials Association provide education in all rules, regulations and policies adopted by the Illinois High School Athletic Association (IHSA) and the National Federation of High School Athletic Association (NFHS).  ..</p>
-            <img src="images/background1.jpg" class="auto-style2" height="113" width="202" />
+         <!--   <img src="images/background1.jpg" class="auto-style2" height="113" width="202" /> -->
            <ol>
 		   <li style="list-style-type:square">Maintain a high standard of ethics, sportsmanship, respect and encouragement.</li>
 		   <li style="list-style-type:square">Promote fair play with cooperation among officials, athletic directors, coaches and players.</li>
 		</ol>
+		
+		<img src="images/background1.jpg" class="auto-style2" height="113" width="202" />
      <!--     <h2>Mission </h2>
             
 	<p>The Northeastern Illinois Football Officials Association is committed to the ongoing process of elevating the standards of officiating in the state of Illinois through recruitment, education, mentoring, evaluations and accountability. </p> -->
