--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <li><a href="clinic.html">CLINICS</a></li>
                 <li><a href="rules.html">RULES</a></li>
 				<li><a href="link.htm">USEFUL LINKS</a></li>		
-			<!--	<li><a href="meeting.html">MEETING</a></li> -->
+				<li><a href="meeting.html">MEETING</a></li>
 
 
             </ul>
