--- a/meeting.html
+++ b/meeting.html
@@ -128,7 +128,7 @@
 	</div> -->
 		
 		<div id="subbanner">
-			<h1>The agenda will be posted in a later date<br> Enjoy the rest of the summer.<br> See Everone in July </h1>
+			<h1>The agenda will be posted in a later date<br> Enjoy the rest of the summer.<br> See you in July </h1>
 			
     	    </div>
 	
