--- a/rules.html
+++ b/rules.html
@@ -78,7 +78,7 @@
                 <li><a href="school.html">SCHOOLS</a></li>               
                 <li><a href="clinic.html">CLINIC</a></li>
                 <li><a href="rules.html">RULES</a></li>
-                <li><a href="Link.html">USEFUL LINKS</a></li>
+                <li><a href="link.htm">USEFUL LINKS</a></li>	   
                 <li><a href="meeting.html">MEETING</a></li>
 
 			
