--- a/meeting.html
+++ b/meeting.html
@@ -73,7 +73,7 @@
 		
         <div id="topnav">
 			<ul> 
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">HOME</a></li>
                  <li><a href="contact.html">CONTACT</a></li>            
                 <li><a href="school.html">SCHOOLS</a></li>               
                 <li><a href="clinic.html">CLINICS</a></li>
