--- a/link.htm
+++ b/link.htm
@@ -173,7 +173,7 @@
 	        
 
 	<div id="footer">
-			<p>&copy;Copyright July 2022 Shayes</p>
+			<p>&copy;Copyright July 2022 Shayes &#127944;</p>
 		</div>
         
 </div>
