--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<meta name="keywords" content="Enter Keywords" />
 	<meta name="description" content="Description Here" />
 	
-	<title>NEIFOA Index	</title>
+	<title>NEIFOA Index	Updated 6.21.2002</title>
 	   
     
     <!-- Google Analytics Code Goes Below Here -->
