--- a/link.htm
+++ b/link.htm
@@ -25,7 +25,7 @@
 	<meta name="keywords" content="Enter Keywords" />
 	<meta name="description" content="Description Here" />
 	
-	<title>Untitled 1</title>
+	<title>NEIFOA Link 6.21.2022 Update</title>
 	   
     
     <!-- Google Analytics Code Goes Below Here -->
