--- a/meeting.html
+++ b/meeting.html
@@ -26,7 +26,7 @@
 	<meta name="keywords" content="Enter Keywords" />
 	<meta name="description" content="Description Here" />
 	
-	<title>NEIFOA Rules	</title>
+	<title>NEIFOA Rules updated 6.21.2022	</title>
 	   
     
     <!-- Google Analytics Code Goes Below Here -->
@@ -102,9 +102,9 @@
 					<a href="https://www.google.com/maps/place/14903+Founders+Crossing,+Homer+Glen,+IL+60491/@41.6191158,-87.9313558,17z/data=!3m1!4b1!4m5!3m4!1s0x880e4180da34a9e7:0x3de8350b8e576cb2!8m2!3d41.6191158!4d-87.9313558">Location</a><br/></span>
 			</li>
 			
-			<!-- Front Row Location -->
-			<!--https://www.google.com/maps/place/14903+Founders+Crossing,+Homer+Glen,+IL+60491/@41.6191158,-87.9313558,17z/data=!3m1!4b1!4m5!3m4!1s0x880e4180da34a9e7:0x3de8350b8e576cb2!8m2!3d41.6191158!4d-87.9313558-->
-			<!--<li class="sliderImage">
+			 Front Row Location 
+			https://www.google.com/maps/place/14903+Founders+Crossing,+Homer+Glen,+IL+60491/@41.6191158,-87.9313558,17z/data=!3m1!4b1!4m5!3m4!1s0x880e4180da34a9e7:0x3de8350b8e576cb2!8m2!3d41.6191158!4d-87.9313558
+			<li class="sliderImage">
 				<img src="images/banner3.jpg" />
 				<span class="top"><strong>Clinic 2022</strong><br />Pontiac High School.<br />Sunday August 14th<br />Level 1 and ll<br />Registration nooon to 1:00pm<br />Click the bottom below for more information<br/><a href="Clinic.html">CLINIC</a><br>
 						<br /> <br /> <br /></span>
@@ -120,7 +120,7 @@
 				<img src="images/banner5.jpg" />
 				<span class="top"><strong>>Contact Dean Magro</strong><br />P.O Box 1145<br />Beecher, IL 60401<br />Phone 219-688-0875<br />Click the contact tab for more information <br /> <br /> <br /></span>
 			</li>
-
+		-->
 		
 		</ul>style="font-size: 26px; text-align:center;color:Tomato;"
 	<div class="clear sliderImage"></div>
