--- a/school.html
+++ b/school.html
@@ -14,7 +14,7 @@
 	<meta name="keywords" content="Enter Keywords" />
 	<meta name="description" content="Description Here" />
 	
-	<title></title>
+	<title>neifoa school page updated 6.21.2022</title>
 	   
     
     <!-- Google Analytics Code Goes Below Here -->
@@ -88,7 +88,7 @@
           				<table>
   <tr>
     <td><img src="images/clifton.jpg" height="60" width="65"></td>
-    <td><<img src="images/Dwight.png" height="60" width="65"></td>
+    <td><img src="images/Dwight.png" height="60" width="65"></td>
     <td><img src="images/Iroqoui.jpg" height="60" width="65"> </td>   
     <td><img src="images/Momence.jpg" height="60" width="65"></td>
  	<td><img src="images/Senaca.jpg"  height="60" width="65"></td>
@@ -116,7 +116,7 @@
 
 <table>
 
-<h2 style="background-color:LightGray;text-align: center;class="auto-style6" style="width: 845px">Independent School's</h2>
+<h2 style="background-color: LightGray;text-align: center; width: 845px">Independent School's</h2>
 
 	 <tr>
 
