--- a/rules.html
+++ b/rules.html
@@ -26,7 +26,7 @@
 	<meta name="keywords" content="Enter Keywords" />
 	<meta name="description" content="Description Here" />
 	
-	<title>NEIFOA INDEX	</title>
+	<title>NEIFOA Rules 6.21.2022 last update	</title>
 	   
     
     <!-- Google Analytics Code Goes Below Here -->
