--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
 	<ul class="styled ">
 				 
                 <li> Promotes education in all rules, regulations and policies adopted by the Illinois High School Association <strong>(IHSA)</strong>
-                      and the National Federation of High School Athlelic Association
+                      and the National Federation of High School Athlelic Association.
                   <strong>(NFHS)</strong>. </li>
-    	        <li>Maintain a high standand of ethics, sportsmanship, respect and encouragement </li>
+    	        <li>Maintain a high standand of ethics, sportsmanship, respect and encouragement. </li>
            		<li>Promote fair play with cooperation among officials, athletic director, coaches and players. </li>
            		
        <!--    	<li>Promote fair play with cooperation among officials, athletic director, coaches and players. </li> -->
