--- a/contact.html
+++ b/contact.html
@@ -139,7 +139,7 @@
           <!--  <form name="contact-form" method="post" action="mail_form.php<?php $_POST[]; ?>"> -->
           
           <form action="https://formsubmit.co/e25a812a9c152e9ac13ebf902950097e" method="POST">
-		<!--  <input type="hidden" name="_cc" value="spirohayes@sbcglobal.net"> -->
+		  <input type="hidden" name="_cc" value="spirohayes@sbcglobal.net">
 		  <input type="hidden" name="_cc" value="djm.1965@sbcglobal.net"> <!--djm.1965@sbcglobal.net Dean Magro Email-->
 		 		  
 		  <!-- Honeypot -->
