--- a/rules.html
+++ b/rules.html
@@ -139,7 +139,7 @@
                  <li style="color:red;font-size:30px"> <a href="Football Rules 2022.pdf">Football Rules 2022</a><br /></li>
                  <li style="color:red;font-size:30px"><a href="Flag Football Rules.pdf">Flag Football </a></li>
                  <li style="color:red;font-size:30px"><a href="https://www.nfhs.org/media/869191/2014_official_football_signals.pdf">Official Football Signals </a></li>
-                 <li style="color:red;font-size:30px"><a href="images/IHSA Blocking below Waist.mp4">Video Blocking below Waist </a></li>
+           <!--      <li style="color:red;font-size:30px"><a href="images/IHSA Blocking below Waist.mp4">Video Blocking below Waist </a></li> -->
                  <li style="color:red;font-size:30px"><a href="https://www.youtube.com/watch?v=643HfDPZvw8&t=298s"><strong>The Kicking Game</strong> </a></li>                 
                  
               <!--   <li style="color:red;font-size:30px"><a href="Drones IHSA.pdf">Using Drones </a></li> -->
