--- a/rules.html
+++ b/rules.html
@@ -140,8 +140,8 @@
                  <li style="color:red;font-size:30px"><a href="Flag Football Rules.pdf">Flag Football </a></li>
                  <li style="color:red;font-size:30px"><a href="https://www.nfhs.org/media/869191/2014_official_football_signals.pdf">Official Football Signals </a></li>
            <!--      <li style="color:red;font-size:30px"><a href="images/IHSA Blocking below Waist.mp4">Video Blocking below Waist </a></li> -->
-                 <li style="color:red;font-size:30px"><a href="https://www.youtube.com/watch?v=643HfDPZvw8&t=298s"><strong>The Kicking Game</strong> </a></li>                 
-                 
+                 <li style="color:red;font-size:30px"><a href="https://www.youtube.com/watch?v=643HfDPZvw8&t=298s"><strong>IHSA The Kicking Game</strong> </a></li>                 
+                 <li style="color:red;font-size:30px"><a https://www.youtube.com/watch?v=XDu5Xc3wqrE"IHSA Forward Progress</a></li>
               <!--   <li style="color:red;font-size:30px"><a href="Drones IHSA.pdf">Using Drones </a></li> -->
                              
             </ol>
