--- a/school.html
+++ b/school.html
@@ -133,7 +133,7 @@
 	<tr>
 	
 	
-	<td><p><a href="https://www.google.com/maps?z=12&q=40.49300,-88.92270+(Central+Catholic+High+School,+1201+Airport+Road)">Central Catholic H.S.<br>1201 Airport Rd<br>Bloomington, IL 61704<br>309-661-7000.314 </a></p></td>
+	<td><p><a href="https://www.google.com/maps?z=12&q=40.49300,-88.92270+(Central+Catholic+High+School,+1201+Airport+Road)">Central Catholic H.S.<br>1201 Airport Rd<br>Bloomington, IL 61704<br>309-661-7000 Ext. 314 </a></p></td>
 	
 	<td><p><a href="https://www.google.com/maps?z=12&q=40.88800,-88.61640+(Pontiac+High+School,+1100+Indiana+Ave.)">Pontiac High School<br>1100 Indiana Avenue<br>Pontiac, IL 61764<br>(815) 844-6113</a></p></td>
 	
