--- a/link.htm
+++ b/link.htm
@@ -162,9 +162,9 @@
         <div id="rightside">
         <img  src="images/uniform1.jpg" height="100" width="175"  />
            <h3>Proper Football Uniform</h3>
-			
-			<p style="text-align:left; height: 327px; width: 192px;">Long or Short Sleeved Black and White Vertically Striped <strong>Shirt</strong>
-			 with Black Panel Sides and Black Colored Yoke from collar to alternating stripes with black sleeves.
+		
+			<p style="text-align:left; height: 327px; width: 192px;">Black and white vertically striped, long or short sleeved knit <strong>Shirt</strong>
+			The shirt shall have 1 inch stripes, black knit cuffs and Byron collar. All officials in a given game are to wear the same type shirt;
 			 <strong>Standard men's long officiating pants,</strong> black in color, with a 1-1/4 " white vertical stripe running the length of the outside seam of each pant leg
            from the belt to the bottom of the pant leg, <strong>Standard black socks,</strong> low cut predominately black football shoes with limited white markings and black laces, black baseball cap with white piping 
             <strong>(Please no Adjustable caps)</strong>black leather belt with plain buckle,black whistle and black lanyard, Blue, black or white bean bag. Every member of each crew must be dressed alike during the contest.
