--- a/meeting.html
+++ b/meeting.html
@@ -137,7 +137,7 @@ body {
         <div id="content" style="width: 638px; height: 492px">
              <h2>Agenda for Tonight Monday 25th</h2>
 			 
-   <!---->  <ul class="emoji-list">
+   <!--  <ul class="emoji-list">
   			
              <li style="color:tomato;font-size:14px">6:30pm - Welcome</li>
              <li style="font-size:14px">6:35pm - Introductions</li>
