--- a/contact.html
+++ b/contact.html
@@ -140,7 +140,7 @@
           
           <form action="https://formsubmit.co/e25a812a9c152e9ac13ebf902950097e" method="POST">
 		  <input type="hidden" name="_cc" value="spirohayes@sbcglobal.net">
-		  <input type="hidden" name="_cc" value="djm.1965@sbcglobal.net"> <!--djm.1965@sbcglobal.net Dean Magro Email-->
+		 <!-- <input type="hidden" name="_cc" value="djm.1965@sbcglobal.net"> djm.1965@sbcglobal.net Dean Magro Email-->
 		 		  
 		  <!-- Honeypot -->
 		  <input type="text" name="_honey" style="display:none">
