--- a/contact.html
+++ b/contact.html
@@ -160,7 +160,7 @@
                     <label for="comments">Comments</label>
                     <textarea name="comments" id="comments" cols="45" rows="5"></textarea></li>
                       
-                    <li><input name="submit" type="submit" class="submit" id="submit" value="Submit">
+                    <input name="submit" type="submit" class="submit" id="submit" value="Submit">
                   
               </form>
           </div> 
