--- a/contact.html
+++ b/contact.html
@@ -137,7 +137,7 @@
           
         <form action="https://formsubmit.co/e25a812a9c152e9ac13ebf902950097e" method="POST"> 
 			
-			<form name="contact-form" method="post" action="mail_form.php?php $_POST[]; ?>">
+		<!--	<form name="contact-form" method="post" action="mail_form.php?php $_POST[]; ?>"> -->
 			<input type="hidden" name="_cc" value="hayessh@icloud.com">
 		<!--	 <input type="hidden" name="_cc" value="djm.1965@sbcglobal.net"> djm.1965@sbcglobal.net Dean Magro Email-->
 			
