--- a/contact.html
+++ b/contact.html
@@ -146,7 +146,8 @@
 
 			<!-- Disable Captcha -->
  				<input type="hidden" name="_captcha" value="false"> 				  
-			<!--	<input type="text" name="title" class="hidden"> -->
+			
+		    <input type="text" name="title" class="hidden"> 
                   
                     <label for="name">Name</label>
                     <input type="text" name="name" id="name">
