--- a/contact.html
+++ b/contact.html
@@ -153,7 +153,7 @@ echo 'Sends us an email';
 			<!-- Disable Captcha -->
  				<input type="hidden" name="_captcha" value="false"> 				  
 			
-		    <input type="text" name="title" class="hidden"> 
+		<!--    <input type="text" name="title" class="hidden"> -->
                   
                     <label for="name">Name</label>
                     <input type="text" name="name" id="name">
