--- a/contact.html
+++ b/contact.html
@@ -150,8 +150,8 @@ echo 'Sends us an email';
 			<!-- Honeypot -->
 				<input type="text" name="_honey" style="display:none">
 
-			<!-- Disable Captcha -->
- 				<input type="hidden" name="_captcha" value="false"> 				  
+			<!-- Disable Captcha 
+ 				<input type="hidden" name="_captcha" value="false"> 	-->			  
 			
 		<!--    <input type="text" name="title" class="hidden"> -->
                   
