--- a/contact.html
+++ b/contact.html
@@ -147,11 +147,11 @@ echo 'Sends us an email';
 			<input type="hidden" name="_cc" value="hayessh@icloud.com">
 		<!--	 <input type="hidden" name="_cc" value="djm.1965@sbcglobal.net"> djm.1965@sbcglobal.net Dean Magro Email-->
 			
-			<!-- Honeypot -->
+			<!-- Honeypot 
 				<input type="text" name="_honey" style="display:none">
 
-			<!-- Disable Captcha -->
- 				<input type="hidden" name="_captcha" value="false"> 				  
+			 Disable Captcha -->
+ 				<input type="hidden" name="_captcha" value="false"> 	-->			  
 			
 		<!--    <input type="text" name="title" class="hidden"> -->
                   
