--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
             <h3>IHSA NEWS</h3>
 		<!--	<p> IHSA Officials Department as issue that the deadline for renewing your officiating license without penalty is midnight, <strong>June 30th.</strong>.</p> -->
 			<p> The IHSA will host our <strong>Officials Conference</strong> on July 8th and 9th at Normal West High School.
-     	      Our host hotel is the Holiday Inn on the north edge of Normal...Officials must watched the <strong>Hate Speech &amp; Harassment Video.</strong> Credit is good for two years.  </p>
+     	      Our host hotel is the Holiday Inn on the north edge of Normal... -->
+				Officials must watched the <strong>Hate Speech &amp; Harassment Video.</strong> Credit is good for two years.  </p>
      	      <p><a style="color:tomato;"; href="images/Change in Power Rating Calculation.jpg"><strong>Change in Power Rating Calculation</strong>  Letter From: Kurt Gibson ..Read More </a></p>
      	      <h3>NEIFOA NEWS</h3>
      	      <p>Association meetings</p>
