--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 	
 	</div> -->
 		
-		 <div id="content" style="width: 638px; height: 492px">
+		 <div id="content" style="width: 638px; height: 525px">
             
             <h2>  <strong>ROLE OF THE ASSOCIATION</strong></h2>
             <p style="font-size:14px; font-family:Arial">Provide education opportunities in all aspects of football officiating including rules, mechanics, regulations and policies and practices adopted by the Illinois High School Athletic Association (IHSA) and the National Federation of State High School Association (NFHS).<br>
@@ -173,7 +173,7 @@
 		<!--	 <p> The IHSA will host our <strong>Officials Conference</strong> on July 8th and 9th at Normal West High School.
      	                  Our host hotel is the Holiday Inn on the north edge of Normal... -->
 	    
-				<p>Officials must watched the <strong>Hate Speech &amp; Harassment Video.</strong> Credit is good for two years.  </p>
+				<p>Officials must watched the <strong>Hate Speech &amp; Harassment Video.</strong>Also must take the Concussion Management Program           					examination.  Both credit is good for two years.  </p>
      	      <p><a style="color:tomato;"; href="images/Change in Power Rating Calculation.jpg"><strong>Change in Power Rating Calculation</strong>  Letter From: Kurt Gibson ..Read More </a></p>
      	      <h3>NEIFOA NEWS</h3>
      	      <p>Association meetings</p>
