--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 		<!--	 <p> The IHSA will host our <strong>Officials Conference</strong> on July 8th and 9th at Normal West High School.
      	                  Our host hotel is the Holiday Inn on the north edge of Normal... -->
 	    
-				<p>Officials must watched the <strong>Hate Speech &amp; Harassment Video.</strong>Also must take the Concussion Management Program           					examination.  Both credit is good for two years.  </p>
+				<p>Officials must watched the <strong>Hate Speech &amp; Harassment Video.</strong> Also take the <strong>Concussion Management 					Program examination.</strong Both credit is good for two years.  </p>
      	      <p><a style="color:tomato;"; href="images/Change in Power Rating Calculation.jpg"><strong>Change in Power Rating Calculation</strong>  Letter From: Kurt Gibson ..Read More </a></p>
      	      <h3>NEIFOA NEWS</h3>
      	      <p>Association meetings</p>
