--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div id="topnav">
 			<ul> 
                 <li><a href="index.html">HOME</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
+                <li><a href="contactest.html">CONTACT</a></li>
                 <li><a href="school.html">SCHOOLS</a></li>
                
                 <li><a href="clinic.html">CLINICS</a></li>
