--- a/contact.html
+++ b/contact.html
@@ -145,8 +145,8 @@
 		  <!-- Honeypot -->
 		  <input type="text" name="_honey" style="display:none">
 									  
-		  <!-- Disable Captcha -->
-		<input type="hidden" name="_captcha" value="false"> 						  
+		  <!-- Disable Captcha 
+		<input type="hidden" name="_captcha" value="false"> 	-->					  
 			 
 
                   <ol>
