--- a/index.html
+++ b/index.html
@@ -169,12 +169,11 @@
 		fuchsia; " href="images/Change in Power Rating Calculation.jpg">Change in Power Rating Calculation Click here to Read More...&#8599;&nbsp; </a>
 		 <!--  <a style="color:
 		   fuchsia; " href="images/Change in Power Rating Calculation.jpg"></a> </p> -->
-            
+	               <p>The following must be completed by 9/13/2022 </p>
                   <ul>
 			        <li>Part One Test</li>
 		 	        <li>Rules Video</li>
-			        <li>Date Completion 8/9 - 9/13</li>
-	    </ul>
+			      </ul>
 	    
                    <h3>NEIFOA NEWS</h3> 
                    <p style="text-align:center; color:red; height: 36px;" >   Officials must completed the follow:</p>
