--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 			      </ul>
 	    
                    <h3>NEIFOA NEWS</h3> 
-                   <p style="text-align:center; color:red; height: 36px;" >   Officials must completed the follow:</p>
+                   <p style="text-align:center; color:red; height: 36px;" >   Officials must completed the follow&nbsp;:</p>
 		   			<p style="text-align:left; color:blue; height: 2px;">   &nbsp;</p>
 		  
 	    <ul>
