--- a/meeting.html
+++ b/meeting.html
@@ -135,7 +135,7 @@ body {
     	    </div>
 	
         <div id="content" style="width: 638px; height: 492px">
-             <h2><a href="Meeting Agenda July 25.docx">Agenda for Tonight Monday 25th</h2>
+		<p><a href="Meeting Agenda July 25.docx">Copy of the Agenda for Tonight click here</a></p>
 			 
                      
 		<iframe width="300" height="300" style="float: Right; margin-left: 10px; margin-bottom: 5px; border: solid black 1px; padding: 2px"
