--- a/meeting.html
+++ b/meeting.html
@@ -135,7 +135,7 @@ body {
     	    </div>
 	
         <div id="content" style="width: 638px; height: 492px">
-		<p Style="color:Tomato; font-size:24px;"><a href="Meeting Agenda July 25.pdf">Copy of the Agenda for Tonight<br> click here</a></p>
+		<p Style="color:Tomato; text-align:center; font-size:24px;"><a href="Meeting Agenda July 25.pdf">Copy of the Agenda for Tonight<br> click here</a></p>
 			 
                      
 		<iframe width="300" height="300" style="float: Right; margin-left: 10px; margin-bottom: 5px; border: solid black 1px; padding: 2px"
