--- a/meeting.html
+++ b/meeting.html
@@ -122,7 +122,7 @@
 	</div> -->
 		
 		<div id="subbanner">
-			<h1>First meeting well be held on the <br> 25th of July </h1>
+			<h1>Next meeting well be held on the <br> August 15th </h1>
 			
     	    </div>
 	
