--- a/clinic.html
+++ b/clinic.html
@@ -114,7 +114,7 @@
 	<a class="button" href="https://www.google.com/maps?z=12&q=40.88800,-88.61640+(Pontiac+High+School,+1100+Indiana+Ave.)">Pontiac High School</a><br>
 	</div> -->
 	<div id="subbanner">
-			<h1> Clinic at Pontaic High School TBA </h1>
+			<h1> 2023 Football clinic be held at Pontaic High School TBA </h1>
 			
     	    </div>
 
