--- a/clinic.html
+++ b/clinic.html
@@ -123,8 +123,8 @@
 	
 	
 	
-	<a href="https://www.google.com/maps?z=12&q=40.88800,-88.61640+(Pontiac+High+School,+1100+Indiana+Ave.)">
-		<img src="images/Football Clinic 2022.jpg"alt="Clinic 2022 " style="width:900px;height:500px;" /></a>
+<!--	<a href="https://www.google.com/maps?z=12&q=40.88800,-88.61640+(Pontiac+High+School,+1100+Indiana+Ave.)">
+		<img src="images/Football Clinic 2022.jpg"alt="Clinic 2022 " style="width:900px;height:500px;" /></a> -->
        	
 		<div id="footer">
 			<p>&copy;Copyright July 2022 Shayes. &#127944;</p>
