--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
 		<p style="text-align:center; width: 190px;">   <a style="color:
 		fuchsia; " href="images/Change in Power Rating Calculation.jpg">Change in Power Rating Calculation Click here to Read More...&#8599;&nbsp; </a>
 		 <!--  <a style="color:
-		   fuchsia; " href="images/Change in Power Rating Calculation.jpg"></a> </p> -->
-	               <p style="text-align:center; color:red; width: 188px; height: 46px;">The following must be completed by 9/13 </p>
+		   fuchsia; " href="images/Change in Power Rating Calculation.jpg"></a> </p> 
+	               <p style="text-align:center; color:red; width: 188px; height: 46px;">The following must be completed by 9/13 </p> -->
                 <!--  <ul>
 			        <li>Part One Test</li>
 		 	        <li>Rules Video</li>
