--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
      	                  Our host hotel is the Holiday Inn on the north edge of Normal... -->
 	        <p> Contracts Posted: Football / First Round </p>
 	        <p> 10/14  Contracts Posted: Football / Second Round </p> 
-	  	  <p>10/21  Contracts Posted: Football / Quarterfinals </p>    
+	  	<p>10/21  Contracts Posted: Football / Quarterfinals </p>  
+	        <p>10/27  Contracts Posted: Football / Semifinals </p>
 	    
      	 <!--     <p style="text-align:center;> Letter From: Kurt Gibson  </p> -->
 		   
