--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 		<!--	 <p> The IHSA will host our <strong>Officials Conference</strong> on July 8th and 9th at Normal West High School.
      	                  Our host hotel is the Holiday Inn on the north edge of Normal... -->
 	    <!--    <p> Contracts Posted: Football / First Round </p> -->
-	        <p> 10/14  Contracts Posted: Football / Second Round </p> 
+	      <!--  <p> 10/14  Contracts Posted: Football / Second Round </p> -->
 	  	<p>10/21  Contracts Posted: Football / Quarterfinals </p>  
 	        <p>10/27  Contracts Posted: Football / Semifinals </p>
 	       <p>11/3  Contracts Posted: Football / Championships</p>
