--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 
 <html>
 
@@ -146,9 +146,9 @@
 
     <!--  <div id="cont_dd35e81a9ce04289a2046eed57095cfa"><script type="text/javascript" async="" src="https://www.theweather.com/wid_loader/dd35e81a9ce04289a2046eed57095cfa"></script></div> -->
    
- 
-     <img src="images/thinksgiving.jpeg" style="top:03%; left:80%" height="113" width="190"  />
-     
+       <img src="images/thinksgiving.jpg" style="top:03%; left:80%" height="113" width="190"  />
+       <p style="text-align:center;"><strong>Happy Thingsgiving </strong></p>
+
    <!-- <img src="images/footballl ihsa.jpeg" style="top:03%; left:80%" height="113" width="190"  />
     
      <p style="text-align:center;"><strong>Wilson Football is the official ball for IHSA</strong></p> -->
@@ -220,4 +220,3 @@
 </div>
 </body>
 </html>
-
