--- a/clinic.html
+++ b/clinic.html
@@ -114,7 +114,9 @@
 	<a class="button" href="https://www.google.com/maps?z=12&q=40.88800,-88.61640+(Pontiac+High+School,+1100+Indiana+Ave.)">Pontiac High School</a><br>
 	</div> -->
 	<div id="subbanner">
-			<h1> 2023 Football clinic be held at Pontaic High School TBA </h1>
+		  <h1> Click on the flyer for directions</h1>
+
+		<!--	<h1> 2023 Football clinic be held at Pontaic High School TBA </h1> -->
 			
     	    </div>
 
@@ -124,7 +126,7 @@
 	
 	
 <!--	<a href="https://www.google.com/maps?z=12&q=40.88800,-88.61640+(Pontiac+High+School,+1100+Indiana+Ave.)">
-		<img src="images/Football Clinic 2022.jpg"alt="Clinic 2022 " style="width:900px;height:500px;" /></a> -->
+		<img src="images/Football Clinic 2023.jpg"alt="Clinic 2022 " style="width:900px;height:500px;" /></a> -->
        	
 		<div id="footer">
 			<p>&copy;Copyright July 2022 Shayes. &#127944;</p>
