--- a/meeting.html
+++ b/meeting.html
@@ -122,8 +122,9 @@
 	</div> -->
 		
 		<div id="subbanner">
-			<h1>Next meeting well be held on the <br> August 15th </h1>
-			
+			 <!--<h1>Next meeting well be held on the <br> August 15th </h1>-->
+			<h1>2023 Meeting will be announce in early July </h1>
+
     	    </div>
 	
         <div id="content" style="width: 638px; height: 551px; background-color:#CCCCCC">          
@@ -151,7 +152,7 @@
 
 	
 		<div id="footer">
-			<p>&copy;Copyright July 2022 Shayes. &#127944;</p>
+			<p>&copy;Updated February 2023 Shayes. &#127944;</p>
 		</div>
         
 </div>
